src/objects/SBQQ__TemplateContent__c.object
<CustomObject>
    <customHelpPage>SBQQ__TemplateContentHelp</customHelpPage>
    <description>Content for use on quote templates. Same content may be used on multiple templates.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for instance to instance migrations as well and imports from external systems.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__CustomSource__c</fullName>
        <description>URL to a VisualForce page that generates content when type is set to &quot;Custom&quot;.</description>
        <inlineHelpText>URL to a VisualForce page that generates content when type is set to &quot;Custom&quot;.</inlineHelpText>
        <label>Custom Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SBQQ__FontFamily__c</fullName>
        <description>Font family to use when rendering this content in the generated PDF quote document.</description>
        <inlineHelpText>Font family to use when rendering this content in the generated PDF quote document.</inlineHelpText>
        <label>Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Noto Sans TC</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>Play</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FontSize__c</fullName>
        <description>Font size to use when rendering this content on the generated PDF quote document.</description>
        <inlineHelpText>Font size to use when rendering this content on the generated PDF quote document.</inlineHelpText>
        <label>Font Size</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Markup__c</fullName>
        <description>Contains the markup if this content is of type &quot;Markup&quot;.</description>
        <inlineHelpText>Contains the markup if this content is of type &quot;Markup&quot;.</inlineHelpText>
        <label>Markup</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__RawMarkup__c</fullName>
        <description>Raw HTML markup. Rich Text field (Markup) strips out many HTML tags so this holds the original version as created by the editor.</description>
        <inlineHelpText>Original HTML version of the content in the Markup field.</inlineHelpText>
        <label>Raw Markup</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableStyle__c</fullName>
        <description>Style of the table used for line items. Standard (default) = user-defined fields as columns with line items listed vertically.</description>
        <inlineHelpText>Style of the table used for line items. Standard (default) = user-defined fields as columns with line items listed vertically.</inlineHelpText>
        <label>Table Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Price Dimensions as Columns</fullName>
                </value>
                <value>
                    <fullName>Price Dimensions as Rows with Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TextColor__c</fullName>
        <description>Default color (in HEX) applied to text rendered by this content.</description>
        <inlineHelpText>Default color (in HEX) applied to text rendered by this content.</inlineHelpText>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this content.</description>
        <inlineHelpText>Type of this content.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                    <default>true</default>
                    <label>HTML</label>
                </value>
                <value>
                    <fullName>Line Items</fullName>
                </value>
                <value>
                    <fullName>Quote Terms</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Template Content</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>